# made-2021-hpc

./: .gitignore  README.md
hw1/: hpc_hw1.ipynb
hw2/: Dockerfile  README.md  results.ipynb
hw2/scripts/: task1_for_loop.sh  task2_array_loop.sh  task3_sum_real.sh  task4_check_file.sh
hw2/src/: Makefile  docker.txt  host.txt  main.c  matmul  matmul.c  matmul.h  matvec.c  matvec.h  tests.sh
hw3/: CMakeLists.txt  README.md
hw3/demo/: CMakeLists.txt  omp_outmes.c
hw3/fixes/: omp_bugparfoc.c  omp_bugreduction.c
hw3/mcpi/: CMakeLists.txt  mcpi.c
hw4/: README.md
hw4/matrix/: CMakeLists.txt  results.ipynb  tests.sh
hw4/matrix/src/: main.c  matmul.c  matpower.c  matpower.h
hw5/: README.md
hw5/meet/: meet  meet.c  test.sh
hw5/rule110/: rule110.py  test.sh
hw6/: CMakeLists.txt  README.md  hist.ipynb
hw6/src/: conv_kernel.cu  median_kernel.cu
